--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,7 @@
-/* .main {
+.main {
     width: 100%;
-    height: 100%;
-} */
+    /* height: 100%; */
+}
 
 .quote {
     text-align: center;
@@ -28,4 +28,38 @@
     width: 80%;
     text-align: justify;
     margin-top: 2rem;
+}
+
+.center_container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.img_container {
+    display: grid;
+    grid-template-columns: 30% 30%;
+    grid-template-rows: auto;
+    margin: 0;
+    padding: 0;
+}
+
+.img_cont {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+.img_header{
+    position: absolute;
+    z-index: 2;
+    top: 0;
 }
