--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -34,32 +34,65 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 .img_container {
+    width: 45%;
     display: grid;
-    grid-template-columns: 30% 30%;
-    grid-template-rows: auto;
-    margin: 0;
-    padding: 0;
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-row: auto auto;
 }
+
 
 .img_cont {
     width: 100%;
     height: 100%;
     object-fit: cover;
     position: relative;
+    overflow: hidden;
 }
 
 .img {
     width: 100%;
     height: 100%;
+    transition: 0.5s all ease-in-out;
 }
 
-.img_header{
+.img_cont:hover .img {
+    transform: scale(1.5);
+}
+.img_header1, .img_header2, .img_header3, .img_header4{
     position: absolute;
     z-index: 2;
-    top: 0;
+}
+
+.img_cont1 {
+    width: 45%;
+    height: 100%;
+}
+
+.img1{
+    width: 100%;
+    height: 100%;
+}
+
+.img_header1 {
+    bottom: 8%;
+    right: 8%;
+}
+
+.img_header2 {
+    bottom: 8%;
+    left: 8%;
+}
+
+.img_header3 {
+    top: 8%;
+    right: 8%;
+}
+
+.img_header4 {
+    top: 8%;
+    left: 8%;
 }
